--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=wanderplan
 # Database Config
-spring.datasource.url=jdbc:postgresql://localhost:5432/wanderplan_db
-spring.datasource.username=postgres
-spring.datasource.password=qwedsa
+#spring.datasource.url=jdbc:postgresql://localhost:5432/wanderplan_db
+#spring.datasource.username=postgres
+#spring.datasource.password=qwedsa
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+server.port=8080
